derive/tests/ui/field-multiple-with-same-attr.rs
use lb_importer_derive::IntoPayload;

#[derive(IntoPayload)]
struct MultipleError {
    #[track]
    track1: String,
    #[track]
    track2: String,
    other: String,
}

fn main() {}
